k8s/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: postgres
  template:
    metadata:
      labels:
        component: postgres
    spec:
      #volumes(array)
      #creamos un volumen, le ponemos un nombre y le decimos al persistentVolumeClaim que tiene que asociarse.
      #nivel Pod
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: database-persistent-volume-claim
      containers:
        - name: postgres
          image: postgres
          ports:
            - containerPort: 5432
          #volumes
          #nivel Container, decimos al container a que volume tiene que asociarse(a nivel de pod)
          volumeMounts:
            - name: postgres-storage
              #data directory that postgres uses to storage the data
              mountPath: /var/lib/postgresql/data
              subPath: postgres
          #cambiamos la configuracion de postgress, como la contraseña a trave de variables de entorno
