k8s/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: worker
  #pod template
  template:
    metadata:
      labels:
        component: worker
    #configuramos el pod
    spec:
      containers:
        - name: worker
          image: matelb/multi-worker
          #no necesita exponer puertos
          #environmnet variables(array)
